feat(auth): add short docs for swagger and start develop auth
