# internal/transport/http/router.go
@@ -8,6 +8,8 @@ import (
 	"github.com/go-chi/chi/v5"
 	chimw "github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/cors"
+	httpSwagger "github.com/swaggo/http-swagger/v2"
+	_ "github.com/yodzafar/url-shortener-service/api/swagger"
 	"github.com/yodzafar/url-shortener-service/internal/transport/http/handler"
 	"github.com/yodzafar/url-shortener-service/internal/transport/http/middleware"
 )
@@ -32,10 +34,22 @@ func NewRouter(d RouterDeps) http.Handler {
 		AllowCredentials: true,
 	}))
 
-	r.Get("/health", func(w http.ResponseWriter, r *http.Request) { w.Write([]byte("ok")) })
+	r.Get("/health", func(w http.ResponseWriter, r *http.Request) {
+		_, err := w.Write([]byte("ok"))
+
+		if err != nil {
+
+		}
+	})
+	r.Get("/swagger/*", httpSwagger.Handler(
+		httpSwagger.URL("/swagger/doc.json"),
+	))
 
 	r.Route("/api/v1", func(r chi.Router) {
-		r.Post("/users", d.User.Create)
+		r.Route("/users", func(ur chi.Router) {
+			ur.Post("/", d.User.Create)
+			ur.Get("/{id}", d.User.GetById)
+		})
 	})
 
 	return r
